--- a/sass/layouts/_main.scss
+++ b/sass/layouts/_main.scss
@@ -11,6 +11,7 @@ h1 {
 }
 
 .task-list {
+  margin-bottom: 6.588rem;
   display: flex;
   flex-direction: column;
   gap: 0.941rem;
