--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -19,6 +19,6 @@ $bg-tertiary: #393433;
 // LINEAR GRADIENT
 $linear-gradient-1: linear-gradient(
   to bottom,
-  rgba(#f9f5f4, 0.3),
+  rgba(#f9f5f4, 0),
   rgba(#f9f5f4, 1)
 );
